// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text Field Test: as number field 1`] = `
<div
  className="field"
>
  <label
    className="label"
  >
    myVal
  </label>
  <input
    onChange={[Function]}
    type="number"
  />
</div>
`;

exports[`Text Field Test: as number field with number 1`] = `
<div
  className="field"
>
  <label
    className="label"
  >
    myVal
  </label>
  <input
    onChange={[Function]}
    type="number"
    value={5432}
  />
</div>
`;

exports[`Text Field Test: as number field with string 1`] = `
<div
  className="field"
>
  <label
    className="label"
  >
    myVal
  </label>
  <input
    onChange={[Function]}
    type="number"
    value="gfsdfasd"
  />
</div>
`;

exports[`Text Field Test: as number field with string number 1`] = `
<div
  className="field"
>
  <label
    className="label"
  >
    myVal
  </label>
  <input
    onChange={[Function]}
    type="number"
    value="125"
  />
</div>
`;

exports[`Text Field Test: as slider field 1`] = `
<div
  className="field"
>
  <label
    className="label"
  >
    myVal
  </label>
  <input
    onChange={[Function]}
    type="range"
  />
</div>
`;

exports[`Text Field Test: as slider field with number 1`] = `
<div
  className="field"
>
  <label
    className="label"
  >
    myVal
  </label>
  <input
    onChange={[Function]}
    type="range"
    value={5432}
  />
</div>
`;

exports[`Text Field Test: as slider field with string 1`] = `
<div
  className="field"
>
  <label
    className="label"
  >
    myVal
  </label>
  <input
    onChange={[Function]}
    type="range"
    value="gfsdfasd"
  />
</div>
`;

exports[`Text Field Test: as slider field with string number 1`] = `
<div
  className="field"
>
  <label
    className="label"
  >
    myVal
  </label>
  <input
    onChange={[Function]}
    type="range"
    value="125"
  />
</div>
`;

exports[`Text Field Test: date with content 1`] = `
<div
  className="field"
>
  <label
    className="label"
  >
    dateVal
  </label>
  <input
    type="date"
    value="2012-01-11"
  />
</div>
`;

exports[`Text Field Test: datetime-local with content 1`] = `
<div
  className="field"
>
  <label
    className="label"
  >
    dateVal
  </label>
  <input
    type="datetime-local"
    value="2018-02-22T07:55"
  />
</div>
`;

exports[`Text Field Test: empty datetime-local field 1`] = `
<div
  className="field"
>
  <label
    className="label"
  >
    dateVal
  </label>
  <input
    type="date"
    value="2011-05-05"
  />
</div>
`;

exports[`Text Field Test: namefield 1`] = `
<div
  className="field"
>
  <label
    className="label"
  >
    guestName
  </label>
  <input
    onChange={[Function]}
    type="text"
  />
</div>
`;

exports[`Text Field Test: namefield changed va 1`] = `
<div
  className="field"
>
  <label
    className="label"
  >
    guestName
  </label>
  <input
    onChange={[Function]}
    type="text"
    value="myval"
  />
</div>
`;

exports[`Text Field Test: password field 1`] = `
<div
  className="field"
>
  <label
    className="label"
  >
    passportWellYou
  </label>
  <input
    onChange={[Function]}
    type="password"
  />
</div>
`;

exports[`Text Field Test: time with content 1`] = `
<div
  className="field"
>
  <label
    className="label"
  >
    dateVal
  </label>
  <input
    type="time"
    value="Invalid date"
  />
</div>
`;
